// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-output > should allow to custom server directory with distPath.server 1`] = `
{
  "output": {
    "chunkFilename": "[name].js",
    "filename": "[name].js",
    "hashFunction": "xxhash64",
    "libraryTarget": "commonjs2",
    "path": "<ROOT>/packages/compat/webpack/tests/dist/server",
    "pathinfo": false,
    "publicPath": "/",
  },
}
`;

exports[`plugin-output > should allow to set distPath.js and distPath.css to empty string 1`] = `
{
  "output": {
    "chunkFilename": "async/[name].js",
    "filename": "[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/compat/webpack/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "async/[name].css",
        "experimentalUseImportModule": undefined,
        "filename": "[name].css",
        "ignoreOrder": true,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
  ],
}
`;

exports[`plugin-output > should allow to use filename.js to modify filename 1`] = `
{
  "output": {
    "chunkFilename": "static/js/async/foo.js",
    "filename": "static/js/foo.js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/compat/webpack/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "static/css/async/[name].css",
        "experimentalUseImportModule": undefined,
        "filename": "static/css/[name].css",
        "ignoreOrder": true,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
  ],
}
`;

exports[`plugin-output > should set output correctly 1`] = `
{
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/compat/webpack/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "static/css/async/[name].css",
        "experimentalUseImportModule": undefined,
        "filename": "static/css/[name].css",
        "ignoreOrder": true,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
  ],
}
`;
